Reworked package layout
* Reworked layout, now provides modules 'amphetype' and
  'amphetype.Widgets'.
* Install makes a script that runs amphetype.main()
* Moved data to amphetype/data/ so they get included in package, no
  more data_files.

Some smaller fixes got sucked up in the change:

* Tweaked CSS files that were missing Q*View styles.
* Fixed an exception when AppLocal/app directory doesn't exist.

Also:

* From this day on, fuck imperative mood commit messages for homemade
  personal projects.

--- a/TODO.org
+++ b/TODO.org
@@ -14,3 +14,4 @@
 * Bug? Why is welcome shown for non-empty db? https://code.google.com/archive/p/amphetype/issues/22
 * allow errors & adjacent errors considered the same error?: github user lalopmak
 * https://github.com/sommerc/pyqt-stylesheets/tree/master/pyqtcss/src/dark_blue and https://doc.qt.io/qt-5/resources.html
+* PROGRESS Pip package / upload to PyPi
