Added a new typing widget.
- Typer over text instead of in a separate box.
- New input modes: insert mode vs overwrite mode.
- New input modes: strict mode vs lenient mode.
- Option for preventing backspacing over correct input.
- Show context around lesson text.
- Progress bar for lesson progress.
- Typing now occurs in the same place as the text is.
- Alt/Ctrl/Meta + backspace now deletes back one word.
- Paragraphs are wrapped in markup and now have some spacing between
  them.

--- a/TODO.org
+++ b/TODO.org
@@ -6,7 +6,7 @@ GitLab's ORG support is half-baked. Do not view this file there. Get Emacs.
 ** TODO OSX build: https://code.google.com/archive/p/amphetype/issues/7
 *** also need builds for any platform, really.
 ** DONE text replacements / unicode translations: https://code.google.com/archive/p/amphetype/issues/15 ; https://code.google.com/archive/p/amphetype/issues/19 ; https://code.google.com/archive/p/amphetype/issues/21
-** TODO alt+backspace => delete word: https://code.google.com/archive/p/amphetype/issues/18
+** PROGRESS alt+backspace => delete word: https://code.google.com/archive/p/amphetype/issues/18
 ** DONE cli for database: sort of https://code.google.com/archive/p/amphetype/issues/23
 *** PROGRESS needs (more) documentation
 *** TODO improve this to actual profiles: more user friendly
@@ -38,7 +38,8 @@ Haven't seen this one happen to me. No idea currently.
 ** allow errors & adjacent errors considered the same error?: github user lalopmak
 Only relevant for some "allow errors" mode? Not a big fan of "allow
 errors" mode and it's hard to implement correctly.
-** DONE possibility to run amphetype portably (personal email suggestion from DreymaR)
+** DONE possibility to run amphetype on USB stick (use data dir storage) (personal email suggestion from DreymaR)
+** handle space more flexibly: option for squeezing space in target text and squeezing space in input
 * Newer ideas
 ** DONE Pip package / upload to PyPi
 ** Locale support? Switching locales.
@@ -48,3 +49,4 @@ Minor feature because would really only affect number conversion and formatting 
 ** TODO Make main text visually change color as you type it
 * Blue Sky
 ** make python package sane (QT / initialization on import)
+** TODO clean up all code and make style/naming/filename consistent (have been replacing piecemeal)
