--- a/TODO.org
+++ b/TODO.org
@@ -6,7 +6,7 @@ GitLab's ORG support is half-baked. Do not view this file there. Get Emacs.
 ** TODO OSX build: https://code.google.com/archive/p/amphetype/issues/7
 *** also need builds for any platform, really.
 ** DONE text replacements / unicode translations: https://code.google.com/archive/p/amphetype/issues/15 ; https://code.google.com/archive/p/amphetype/issues/19 ; https://code.google.com/archive/p/amphetype/issues/21
-** PROGRESS alt+backspace => delete word: https://code.google.com/archive/p/amphetype/issues/18
+** DONE PROGRESS alt+backspace => delete word: https://code.google.com/archive/p/amphetype/issues/18
 ** DONE cli for database: sort of https://code.google.com/archive/p/amphetype/issues/23
 *** PROGRESS needs (more) documentation
 *** TODO improve this to actual profiles: more user friendly
@@ -40,13 +40,34 @@ Only relevant for some "allow errors" mode? Not a big fan of "allow
 errors" mode and it's hard to implement correctly.
 ** DONE possibility to run amphetype on USB stick (use data dir storage) (personal email suggestion from DreymaR)
 ** handle space more flexibly: option for squeezing space in target text and squeezing space in input
+*** in that vein: also option for preserving space/indent (Jan Novák)
 * Newer ideas
 ** DONE Pip package / upload to PyPi
 ** Locale support? Switching locales.
 
 Minor feature because would really only affect number conversion and formatting and such.
-** TODO make & use CHANGELOG
-** TODO Make main text visually change color as you type it
+
+** STRT make & use CHANGELOG
+** DONE Make text visually change color as you type it
+Sort of implemented with Typer 2.0
+** IDEA look into converting python standard library documentation into a typing document
+** TODO sync text after errors in lenient mode
+*** IDEA or even better: "live" edit distance?
+** TODO mention pipx in readme
+** TODO major overhaul of Text.py
+*** DONE fixed min/max not being respected (William Hornsby)
+** blind mode?
+you don't get to see what errors you've made until the end. Can kind of be simulated currently by setting colors, but doesn't work for Typer 2.
+** TODO document env/logging
+- [X] under --help
+- [ ] elsewhere? website?
+
 * Blue Sky
-** make python package sane (QT / initialization on import)
-** TODO clean up all code and make style/naming/filename consistent (have been replacing piecemeal)
+** TODO cleanup project
+- [ ] make style/naming/filenamems consistent
+- [ ] adopt new-style settings
+- [ ] no global objects (other than possibly app)
+- [ ] rewrite Text.py and similar
+- [ ] abstract out typing behavor from all widgets
+- [ ] force_ascii outside of typing widget
+** TODO proper import dialog w/ options
